--- a/blog-post.css
+++ b/blog-post.css
@@ -1,107 +1,95 @@
+@import "navigation.css";
+@import "name.css";
+@import "social.css";
 .parent {
-	display: grid;
-	grid-template-columns: repeat(11, 1fr);
-	grid-template-rows: repeat(11, 1fr);
-	grid-column-gap: 0px;
-	grid-row-gap: 0px;
+  display: grid;
+  grid-template-columns: repeat(11, 1fr);
+  grid-template-rows: repeat(11, 1fr);
+  grid-column-gap: 0px;
+  grid-row-gap: 0px;
 }
+
 .header {
-	grid-area: 1 / 1 / 2 / 12;
+  grid-area: 1 / 1 / 2 / 12;
 }
-#name > h1 {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	font-family: 'Handlee', cursive;
-	font-size: 28pt;
-	color: #000000;
-	padding: 25px 0 0 0;
-}
-#nav {
-	background-color: #fff;
-	color: #000000;
-	list-style: none;
-	text-align: center;
-	padding: 20px 0 20px 0;
-	font-family: 'Spartan', sans-serif;
-}
-#nav > li {
-	display: inline-flex;
-	padding: 0 25px 0 25px;
-	font-size: 24px;
-}
-#nav > li > a {
-	text-decoration: none;
-	color: #000000;
-}
-#nav > li > a:hover {
-	color: #c1c1c1;
-}
+
 .image {
-	grid-area: 3 / 5 / 6 / 8;
-	position: relative;
-	background-image: url(https://www.seriouseats.com/recipes/images/2017/06/20170621-michelada-chelada-vicky-wasik-8-1500x1125.jpg);
-	border-radius: 15px;
-	background-size: contain;
+  grid-area: 3 / 5 / 6 / 8;
+  position: relative;
+  background-image: url(https://www.seriouseats.com/recipes/images/2017/06/20170621-michelada-chelada-vicky-wasik-8-1500x1125.jpg);
+  border-radius: 15px;
+  background-size: contain;
 }
+
 .content {
-	grid-area: 7 / 3 / 10 / 10;
-	font-family: 'Spartan', sans-serif;
+  grid-area: 7 / 3 / 10 / 10;
+  font-family: 'Spartan', sans-serif;
 }
-.content > h3 {
-	display: flex;
-	align-items: left;
-	justify-content: left;
-	font-family: 'Handlee', cursive;
-	font-size: 18pt;
-	color: #000000;
+
+.content>h3 {
+  display: flex;
+  align-items: left;
+  justify-content: left;
+  font-family: 'Handlee', cursive;
+  font-size: 18pt;
+  color: #000000;
 }
+
 .footer {
-	grid-area: 11 / 1 / 12 / 12;
-	background-color: #c1c1c1;
-	font-family: 'Spartan', sans-serif;
-	padding: 25px 20px 0 25px;
-	color: #fff;
+  grid-area: 11 / 1 / 12 / 12;
+  background-color: #c1c1c1;
+  font-family: 'Spartan', sans-serif;
+  padding: 25px 20px 0 25px;
+  color: #fff;
 }
+
+.footer>p {
+  text-align: left;
+  font-family: 'Spartan', sans-serif;
+  padding: 45px 20px 0 25px;
+  color: #fff;
+}
+
 @media(min-width: 300px) and (max-width:600px) {
-	.parent {
-		display: grid;
-		grid-template-columns: repeat(3, 1fr);
-		grid-template-rows: .15fr repeat(2, 1fr) .15fr;
-		grid-column-gap: 0px;
-		grid-row-gap: 30px;
-	}
-	.header {
-		grid-area: 1 / 1 / 2 / 6;
-	}
-	.image {
-		grid-area: 2 / 2 / 3 / 3;
-	}
-	.content {
-		grid-area: 3 / 2 / 4 / 3;
-	}
-	.footer {
-		grid-area: 4 / 1 / 5 / 6;
-	}
+  .parent {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: .15fr repeat(2, 1fr) .15fr;
+    grid-column-gap: 0px;
+    grid-row-gap: 30px;
+  }
+  .header {
+    grid-area: 1 / 1 / 2 / 6;
+  }
+  .image {
+    grid-area: 2 / 2 / 3 / 3;
+  }
+  .content {
+    grid-area: 3 / 2 / 4 / 3;
+  }
+  .footer {
+    grid-area: 4 / 1 / 5 / 6;
+  }
 }
+
 @media(min-width:900px) {
-	.parent {
-		display: grid;
-		grid-template-columns: repeat(11, 1fr);
-		grid-template-rows: repeat(11, 1fr);
-		grid-column-gap: 0px;
-		grid-row-gap: 0px;
-	}
-	.header {
-		grid-area: 1 / 1 / 2 / 12;
-	}
-	.image {
-		grid-area: 4 / 2 / 9 / 5;
-	}
-	.content {
-		grid-area: 4 / 6 / 9 / 11;
-	}
-	.footer {
-		grid-area: 11 / 1 / 12 / 12;
-	}
+  .parent {
+    display: grid;
+    grid-template-columns: repeat(11, 1fr);
+    grid-template-rows: repeat(11, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+  }
+  .header {
+    grid-area: 1 / 1 / 2 / 12;
+  }
+  .image {
+    grid-area: 4 / 2 / 9 / 5;
+  }
+  .content {
+    grid-area: 4 / 6 / 9 / 11;
+  }
+  .footer {
+    grid-area: 11 / 1 / 12 / 12;
+  }
 }
