--- a/blog-post.css
+++ b/blog-post.css
@@ -3,26 +3,65 @@
 @import "social.css";
 .parent {
   display: grid;
-  grid-template-columns: repeat(11, 1fr);
-  grid-template-rows: repeat(11, 1fr);
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: .15fr repeat(2, 1fr) .15fr;
   grid-column-gap: 0px;
-  grid-row-gap: 0px;
+  grid-row-gap: 15px;
 }
 
 .header {
-  grid-area: 1 / 1 / 2 / 12;
+  grid-area: 1 / 1 / 2 / 6;
 }
 
 .image {
-  grid-area: 3 / 5 / 6 / 8;
+  grid-area: 2 / 3 / 3 / 4;
   position: relative;
-  background-image: url(https://www.seriouseats.com/recipes/images/2017/06/20170621-michelada-chelada-vicky-wasik-8-1500x1125.jpg);
   border-radius: 15px;
   background-size: contain;
 }
 
+image>p {
+  position: relative;
+}
+
+.card {
+  grid-area: 3 / 2 / 4 / 3;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  max-width: 300px;
+  margin: auto;
+  text-align: center;
+  border-radius: 5px;
+}
+
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.title {
+  color: grey;
+  font-size: 18px;
+}
+
+button {
+  border: none;
+  outline: 0;
+  display: inline-block;
+  padding: 8px;
+  color: white;
+  background-color: #0cbb06;
+  text-align: center;
+  cursor: pointer;
+  width: 100%;
+  font-size: 18px;
+}
+
+button:hover,
+a:hover {
+  opacity: 0.7;
+}
+
 .content {
-  grid-area: 7 / 3 / 10 / 10;
+  grid-area: 3 / 3 / 4 / 5;
   font-family: 'Spartan', sans-serif;
 }
 
@@ -36,7 +75,7 @@
 }
 
 .footer {
-  grid-area: 11 / 1 / 12 / 12;
+  grid-area: 4 / 1 / 5 / 6;
   background-color: #c1c1c1;
   font-family: 'Spartan', sans-serif;
   padding: 25px 20px 0 25px;
@@ -53,43 +92,24 @@
 @media(min-width: 300px) and (max-width:600px) {
   .parent {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: .15fr repeat(2, 1fr) .15fr;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: .15fr repeat(3, 1fr) .15fr;
     grid-column-gap: 0px;
-    grid-row-gap: 30px;
+    grid-row-gap: 15px;
   }
   .header {
     grid-area: 1 / 1 / 2 / 6;
   }
   .image {
-    grid-area: 2 / 2 / 3 / 3;
+    grid-area: 2 / 3 / 3 / 4;
+  }
+  .card {
+    grid-area: 4 / 3 / 5 / 4;
   }
   .content {
-    grid-area: 3 / 2 / 4 / 3;
+    grid-area: 3 / 3 / 4 / 4;
   }
   .footer {
-    grid-area: 4 / 1 / 5 / 6;
-  }
-}
-
-@media(min-width:900px) {
-  .parent {
-    display: grid;
-    grid-template-columns: repeat(11, 1fr);
-    grid-template-rows: repeat(11, 1fr);
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
-  }
-  .header {
-    grid-area: 1 / 1 / 2 / 12;
-  }
-  .image {
-    grid-area: 4 / 2 / 9 / 5;
-  }
-  .content {
-    grid-area: 4 / 6 / 9 / 11;
-  }
-  .footer {
-    grid-area: 11 / 1 / 12 / 12;
+    grid-area: 5 / 1 / 6 / 6;
   }
 }
